[package]
name = "php-image-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
ext-php-rs = {  version = "0.13.1", git = "https://github.com/davidcole1340/ext-php-rs", branch = "macro-state-deprecation-v2" }
ext-php-rs-derive = { version = "0.10.2", git = "https://github.com/davidcole1340/ext-php-rs", branch = "macro-state-deprecation-v2" }
fast_image_resize = { version = "5.1.2", features = ["image"] }
image = "0.25.5"
webp = "0.3.0"

[profile.release]
strip = "debuginfo"
lto = "thin"
opt-level = 3